# drop-archiving

./: Cargo.toml  README.md
lib/logger/: logger.rs
lib/postgres/: postgres.rs
migrations/: 20241114103113_init.down.sql  20241114103113_init.up.sql  20241119170347_add_user_id.down.sql  20241119170347_add_user_id.up.sql  20241123175651_images_and_multitracks.down.sql  20241123175651_images_and_multitracks.up.sql
migrations/2024-11-13-222126_initial/: down.sql  up.sql
src/: config.rs  lib.rs  main.rs  schema.rs
src/client/grpc/: client.rs
src/db/: mod.rs  models.rs  query.rs  store.rs
src/http/: archiving.rs  format.rs  handlers.rs  middleware.rs  mod.rs  router.rs
src/lib/: mod.rs
src/lib/minio/: minio.rs
src/lib/postgres/: postgres.rs
src/libr/: mod.rs
src/libr/minio/: minio.rs
src/libr/postgres/: postgres.rs
src/service/: archiving.rs  metadata.rs  mod.rs
