[package]
name = "Rust_Part"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.19.2", features = ["full"] }
tokio-postgres = "0.7"
anyhow = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.2"
once_cell = "1.10.0"

