[package]
name = "Rust_Part"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-postgres = "0.7"
anyhow = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.2"
once_cell = "1.10.0"
aws-sdk-s3 = "1.61"
aws-types = "1.3"
http = "0.2"
reqwest = "0.12.7"
tonic = "0.11.0"
prost = "0.12.0"
axum = { version = "0.6", features = ["multipart"] }
tower = "0.5.0"
tower-http = { version = "0.5.0", features = ["limit"] }
mime = "0.3"
zip = "0.6.2"
ffmpeg-next = "6"
infer = "0.13"
symphonia = { version = "0.5.4", features = ["all"] }
chrono = "0.4.38"


[build-dependencies]
tonic-build = "0.11.0"




